<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HorseValue</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_horse">AddHorseActivity</string>
    <string name="horse_name">Horse Name: </string>
    <string name="reg_assoc">Registered Association: </string>
    <string name="reg_numb">Registration Number: </string>
    <string name="breed_lbl">Breed: </string>
    <string name="sex_lbl">Sex: </string>
    <string name="age_lbl">Age: </string>
    <string name="height_lbl">Height: </string>
    <string name="weight_lbl">Weight: </string>
    <string name="color_lbl">Color: </string>

</resources>
